--- a/css/style.css
+++ b/css/style.css
@@ -85,11 +85,8 @@ body{
   display: flex;
   justify-content: center;
   padding: 1rem;
-  z-index: 9999; /* 🔥 MÁS ALTO QUE EL HERO */
+  z-index: 9999;
 }
-
-
-
 
 .marca{
   position:absolute;
@@ -317,5 +314,44 @@ body{
   }
   .destacados{
     grid-template-columns:1fr;
+  }
+}
+
+.nav-toggle{
+  display:none;
+}
+
+.toggle-menu{
+  display:none;
+  background:none;
+  border:none;
+  color:white;
+  font-size:1.4rem;
+  cursor:pointer;
+}
+
+@media (max-width:768px){
+
+  .toggle-menu{
+    display:block;
+  }
+
+  .menu{
+    position:absolute;
+    top:100%;
+    left:0;
+    width:100%;
+    background:rgba(12,18,35,.95);
+    backdrop-filter:blur(12px);
+    flex-direction:column;
+    align-items:center;
+    gap:.5rem;
+    padding:1rem 0;
+    display:none;
+  }
+
+  /* CUANDO EL CHECKBOX ESTÁ MARCADO */
+  .nav-toggle:checked + .toggle-menu + .menu{
+    display:flex;
   }
 }
