--- a/css/style.css
+++ b/css/style.css
@@ -355,3 +355,18 @@ body{
     display:flex;
   }
 }
+
+@media (max-width:768px){
+
+  .barra-navegacion{
+    justify-content: space-between;
+  }
+
+  .marca{
+    position: static;
+  }
+
+  .toggle-menu{
+    margin-left: auto;
+  }
+}
